arduino-ide-extension/src/browser/style/settings-dialog.css
#arduino-settings-dialog-container > .dialogBlock {
    height: 531px;;
    max-width: 740px !important;
    width: calc(100% - 96px);
}

#arduino-settings-dialog-container > .dialogBlock > .dialogContent {
    justify-content: flex-start;
}

.arduino-settings-dialog .content {
    padding: 5px;
}

.arduino-settings-dialog .flex-line {
    display: flex;
    align-items: center;
    white-space: nowrap;
}

.arduino-settings-dialog .with-margin {
    margin-left: 5px;
}

.arduino-settings-dialog .theia-select {
    background: var(--theia-input-background) !important;
}

.arduino-settings-dialog .column > div {
    height: 26px;
    vertical-align: middle;
}

.arduino-settings-dialog .column-container {
    display: flex;
    gap: 20px;
}

.arduino-settings-dialog .stretch {
    flex: 1;
}

.arduino-settings-dialog .flex-line .theia-button.shrink {
    min-width: unset;
}

.arduino-settings-dialog .proxy-settings {
    margin: 5px;
}

.arduino-settings-dialog input[type="radio"] {
    margin: 3px !important;
}

.arduino-settings-dialog .theia-input.small {
    max-width: 50px;
    width: 50px;
}

.additional-urls-dialog .link:hover {
    color: var(--theia-textLink-activeForeground);
}

.arduino-settings-dialog .react-tabs__tab-panel {
    padding-bottom: 25px;
}

.arduino-settings-dialog .react-tabs__tab-list {
    display: flex;
    justify-content: center;
}

.additional-urls-dialog textarea {
    width: 100%;
}

.p-Widget.dialogOverlay .dialogBlock .dialogContent.additional-urls-dialog {
    display: block;
}

